# cpip

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
agent/: __init__.py  browser.py  orchestrator.py  router.py  tools.py
builder/: __init__.py  compiler.py  queue.py  scanner.py  signer.py  worker.py
builder/dockerfiles/: Dockerfile.arm64  Dockerfile.builder
client/: __init__.py  cache.py  cli.py  config.py  daemon.py  doctor.py  installer.py  resolver.py  shell.py  sync.py
client/ui/: __init__.py  console.py  panels.py  progress.py
deploy/: Dockerfile.builder  Dockerfile.server  nginx.conf
docs/: architecture.md  setup.md  usage.md
executor/: __init__.py  browser_runtime.py  container.py  gpu_runtime.py  pool.py  sandbox.py
runtime/: __init__.py  fallback.py  hooks.py  interceptor.py  proxy.py  scheduler.py  serialization.py  streaming.py
security/: __init__.py  audit.py  crypto.py  sandbox.py  signing.py
server/: __init__.py  app.py  config.py
server/api/: __init__.py  auth.py  builds.py  execution.py  health.py  packages.py
server/auth/: __init__.py  jwt_handler.py  middleware.py  rate_limiter.py
server/db/: __init__.py  models.py  session.py
server/services/: __init__.py  build_service.py  execution_service.py  package_service.py
server/ws/: __init__.py  hub.py  rpc.py  sessions.py
shared/: __init__.py  constants.py  exceptions.py  models.py  platform.py  protocol.py
tests/: conftest.py
virtualization/: __init__.py  fetcher.py  layers.py  linker.py  loader.py  mount.py  registry.py
