[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cpip"
version = "0.1.0"
description = "Cloud-Powered Package Virtualization for Android Termux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "cpip contributors" },
]
keywords = ["termux", "android", "cloud", "package-manager", "virtualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.0",
    "toml>=0.10.0",
    "platformdirs>=4.0",
    "msgpack>=1.0",
    "cryptography>=41.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0",
    "celery>=5.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.6",
    "boto3>=1.34.0",
]
builder = [
    "docker>=7.0",
    "redis>=5.0",
    "celery>=5.3",
]
agent = [
    "playwright>=1.40",
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7",
]

[project.scripts]
cpip = "client.cli:app"

[tool.hatch.build.targets.wheel]
packages = [
    "client",
    "runtime",
    "virtualization",
    "server",
    "builder",
    "executor",
    "agent",
    "security",
    "shared",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
